# pgexercises

./: Cargo.toml  README.md
migrations/2018-01-29-213600_db_setup/: down.sql  up.sql
src/: ex_basic.rs  ex_joins.rs  main.rs  models.rs  schema.rs  utils.rs
tools/: import.sh  psql.sh
